# Project-Math

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: architecture.md  content-schema.md  learning-design.md  product-brief.md  roadmap.md  testing-strategy.md  ui-system.md
docs/agent/: NEXT_CODEX_PROMPT.md  PROJECT_STATE.md  VERTICAL_SLICE_PROTOCOL.md
docs/architecture/: graph-rendering-options.md
scripts/: migrate-legacy-studybook.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.module.css  App.test.tsx  App.tsx  ReaderControls.test.tsx  ReaderControls.tsx  Router.test.ts  Router.ts  displayMode.ts  readerSettings.test.ts  readerSettings.ts  tauriMenu.test.ts  tauriMenu.ts
src/content/: courseHelpers.ts  index.ts  quizScoring.ts  schema.ts  validateContent.ts
src/design/: index.ts  tokens.css
src/export/: lessonSummaryClipboard.test.ts  lessonSummaryClipboard.ts  lessonSummaryDownload.ts  lessonSummaryExport.test.ts  lessonSummaryExport.ts
src/graphs/: GraphView.test.tsx  GraphView.tsx  graphSpec.ts
src/math/: MathBlock.tsx  MathInline.tsx  renderLatex.ts
src/rendering/: BlockRenderer.tsx  GlossaryContext.tsx  GlossaryPopover.module.css  GlossaryPopover.tsx  LessonView.tsx  RichText.tsx  lesson.module.css  popoverPosition.ts  (+2 more)
(+89 files in other folders)
